--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,16 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="biboroku.css">
+<link rel="stylesheet" href="../biboroku.css">
 <title>学習の履歴</title>
 </head>
 <body>
 
 <p>テスト</p>
 
-<p>忘れそうな部分 or 重要な部分について
+<p>忘れそうな部分 or 重要な部分について<br>
 	備忘録として記録すること
 </p>
+
+<p>第１章　プログラムの書き方</p>
+
+<p>第２章　式と演算子</p>
+
+<p>第３章　条件分岐と繰り返し</p>
+
+<p>第４章　配列</p>
 
 
 
