cssのパスミス間違い。ここからcss反映可能。

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 <meta charset="UTF-8">
-<link rel="stylesheet" href="../biboroku.css">
+
+<link rel="stylesheet" href="./contents/style.css">
+
 <title>学習の履歴</title>
+
 </head>
+
+
 <body>
 
 <p>テスト</p>
 
-<p>忘れそうな部分 or 重要な部分について<br>
+<div class="main">
+
+	<div class="contentA">
+	<p>忘れそうな部分 or 重要な部分について<br>
 	備忘録として記録すること
-</p>
+	</p>
 
-<p>第１章　プログラムの書き方</p>
+	<p><a href="first-program.html">第１章　プログラムの書き方</a></p>
 
-<p>第２章　式と演算子</p>
+	<p>第２章　式と演算子</p>
 
-<p>第３章　条件分岐と繰り返し</p>
+	<p>第３章　条件分岐と繰り返し</p>
 
-<p>第４章　配列</p>
+	<p>第４章　配列</p>
 
+	</div>
+	
+	<div class="contentB">
+		
+		<p>各章の内容を用いたもの</p>
+		
+		<p><a href="">第１章　成果物</a></p>
+		
+	</div>
 
+</div>
 
 
 </body>
+
+
+
 </html>
